--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 .container {
     padding-right: 15px;
     padding-left: 15px;
@@ -20,7 +19,64 @@
 img {
     width: 180px;
     height: auto;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
+
+.overlayleft {
+    position: absolute;
+    bottom: 0;
+    left: 100%;
+    right: 0;
+    background-color: #F2302C;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+}
+
+[class*="col-"]:hover .overlayleft {
+    width: 100%;
+    left: 0;
+}
+
+.overlayright {
+    position: absolute;
+    bottom: 0;
+    right: 100%;
+    left: 0;
+    background-color: #F2302C;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+}
+
+[class*="col-"]:hover .overlayright {
+    width: 100%;
+    right: 0;
+}
+
+.text {
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    overflow: hidden;
+    top: 30%;
+    left: 30%;
+    transform: translate(-30%, -30%);
+    -ms-transform: translate(-30%, -30%);
+}
+h3 {
+    font-size: 10px;
+
+}
+p {
+    font size:8px;
+}
+
+
 .redflame {
     background-color: #EF562D;
 }
