--- a/style.css
+++ b/style.css
@@ -141,6 +141,80 @@
 
 /* fin css map contact */
 
+/* debut css certificats */
+
+
+.certificat .container-fluid .fries {
+    position: absolute;
+    bottom: 75px;
+    left: 115px;
+    color: red;
+    font: bold 2em sans-serif;
+    text-shadow: 2px 2px 0 white;
+    text-align: center;
+    line-height: 80px;
+}
+
+.certificat .container-fluid .norelief {
+    position: absolute;
+    bottom: 135px;
+    left: 128px;
+    color: white;
+    font: bold 2em sans-serif;
+    text-align: center;
+}
+
+.certificat .container-fluid .bread {
+    position: absolute;
+    bottom: 130px;
+    left: 75px;
+    color: white;
+    font: bold 1.4em sans-serif;
+    text-align: center;
+    background-color: black;
+    padding: 20px 10px 20px;
+    border-radius: 5px;
+}
+
+.certificat .container-fluid .stars {
+    position: absolute;
+    bottom: 80px;
+    left: 110px;
+    color: white;
+    font: bold 2.5em sans-serif;
+    text-align: center;
+    padding: 20px 10px 20px;
+
+}
+
+.certificat .container-fluid .vbf {
+    position: absolute;
+    bottom: 170px;
+    left: 90px;
+    color: white;
+    font: bold 2em sans-serif;
+    text-align: center;
+    padding: 20px 10px 20px;
+
+}
+
+.certificat .container-fluid .boeuf {
+    position: absolute;
+    bottom: 60px;
+    left: 70px;
+    color: white;
+    font: bold 2em sans-serif;
+    text-align: center;
+    padding: 20px 10px 20px;
+
+}
+
+
+
+
+
+/*fin css certificats */
+
 /* début pied de page */
 
 .foot .row3 [class*="col-"], footer {
